// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput renders component 1`] = `
<WithStyles(ForwardRef(TextField))
  InputProps={
    Object {
      "endAdornment": <WithStyles(ForwardRef(InputAdornment))
        position="end"
      >
        <WithStyles(ForwardRef(IconButton))
          aria-label="Toggle password visibility"
          onClick={[MockFunction]}
        >
          <Memo(VisibilityOffIcon) />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(InputAdornment))>,
    }
  }
  error={false}
  fullWidth={true}
  id="password"
  label="Master password"
  margin="normal"
  onChange={[MockFunction]}
  type="password"
  value="test password"
  variant="outlined"
/>
`;

exports[`PasswordInput renders with error 1`] = `
<WithStyles(ForwardRef(TextField))
  InputProps={
    Object {
      "endAdornment": <WithStyles(ForwardRef(InputAdornment))
        position="end"
      >
        <WithStyles(ForwardRef(IconButton))
          aria-label="Toggle password visibility"
          onClick={[MockFunction]}
        >
          <Memo(VisibilityOffIcon) />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(InputAdornment))>,
    }
  }
  error={true}
  fullWidth={true}
  id="password"
  label="Password"
  margin="normal"
  onChange={[MockFunction]}
  type="password"
  value=""
  variant="outlined"
/>
`;

exports[`PasswordInput renders with password visible 1`] = `
<WithStyles(ForwardRef(TextField))
  InputProps={
    Object {
      "endAdornment": <WithStyles(ForwardRef(InputAdornment))
        position="end"
      >
        <WithStyles(ForwardRef(IconButton))
          aria-label="Toggle password visibility"
          onClick={[MockFunction]}
        >
          <Memo(VisibilityIcon) />
        </WithStyles(ForwardRef(IconButton))>
      </WithStyles(ForwardRef(InputAdornment))>,
    }
  }
  error={true}
  fullWidth={true}
  id="password"
  label="Password"
  margin="normal"
  onChange={[MockFunction]}
  type="test"
  value=""
  variant="outlined"
/>
`;
